feat: generate payment link
